feat: nambah swagger post dan update kategori
