# src/docs/swagger_output.json
@@ -318,12 +318,12 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CategoriesCreateRequest"
+                "$ref": "#/components/schemas/CategoryCreateRequest"
               }
             },
             "application/xml": {
               "schema": {
-                "$ref": "#/components/schemas/CategoriesCreateRequest"
+                "$ref": "#/components/schemas/CategoryCreateRequest"
               }
             }
           }
@@ -672,6 +672,18 @@
         },
         "xml": {
           "name": "ProductCreateRequest"
+        }
+      },
+      "CategoryCreateRequest": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "Elektronik"
+          }
+        },
+        "xml": {
+          "name": "CategoryCreateRequest"
         }
       }
     }
